fixed spacing issues in list

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
   background: #e9e9e9;
   color: #666666;
@@ -121,6 +126,13 @@ footer {
     flex: 1;
     background: #33b5e5;
     color: #ffffff;
+    height: 100%;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.item-table .add-button:hover {
+    background: #178ab4;
 }
 
 .item-table-history {
@@ -129,14 +141,25 @@ footer {
 
 .item-table-history .row{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .item-table-history .row .new-item {
     flex: 3.8;
+    margin-top: -1.4em;
+    word-break:break-all;
 }
 
 .item-table-history .row .delete-button{
     flex: 1;
     background: #33b5e5;
     color: #ffffff;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.item-table-history .row .delete-button:hover {
+    background: #178ab4;
 }
